组件升级v3.0